contact page added

--- a/css/custom.css
+++ b/css/custom.css
@@ -141,7 +141,13 @@ body {
       border-bottom: 1px solid #F3F1F2;
       height: auto; } }
 
+.card-link:hover {
+  color: white !important;
+  text-decoration: none !important;
+  cursor: pointer !important; }
+
 .school-menu-card:hover {
+  cursor: pointer;
   border-right: none;
   color: white !important;
   background: none;
@@ -161,6 +167,31 @@ body {
 
 .uk-active > .activate-card .menu-arrow-icon > .menu-svg-arrow path, .uk-active > .activate-card .menu-arrow-icon > .academics-menu-svg-arrow path {
   fill: white !important; }
+
+.school-menu-card:hover > a .uk-padding .school-menu-text-age > .splash-burgundy {
+  color: white; }
+
+.school-menu-card:hover > a .uk-padding .school-menu-text-age > .superscript {
+  border-bottom: 1px solid white; }
+
+.school-menu-card:hover > a .uk-padding .menu-arrow-icon > .menu-svg-arrow path, .school-menu-card:hover > a .uk-padding .menu-arrow-icon > .academics-menu-svg-arrow path {
+  fill: white !important; }
+
+.school-menu-card:hover > a .uk-padding .menu-arrow-icon > .menu-svg-arrow {
+  -webkit-animation-name: bounce;
+  /* Safari 4.0 - 8.0 */
+  -webkit-animation-duration: 0.8s;
+  /* Safari 4.0 - 8.0 */
+  animation-name: bounce;
+  animation-iteration-count: infinite; }
+
+.school-menu-card:hover > a .uk-padding .menu-arrow-icon > .academics-menu-svg-arrow {
+  -webkit-animation-name: bounce-down;
+  /* Safari 4.0 - 8.0 */
+  -webkit-animation-duration: 0.8s;
+  /* Safari 4.0 - 8.0 */
+  animation-name: bounce-down;
+  animation-iteration-count: infinite; }
 
 .school-menu-card:hover > .uk-padding .school-menu-text-age > .splash-burgundy {
   color: white; }
@@ -456,7 +487,7 @@ body {
   right: 0;
   background-repeat: no-repeat;
   background-position: center;
-  z-index: 1000; }
+  z-index: 1; }
   @media only screen and (max-width: 640px), (min-width: 640px) and (max-width: 1200px) and (orientation: portrait) {
     .page-hero {
       position: static;
@@ -777,7 +808,7 @@ header {
   margin-top: 30px;
   width: 100%;
   color: white; }
-  @media only screen and (max-width: 640px), (min-width: 640px) and (max-width: 1200px) and (orientation: portrait) {
+  @media only screen and (max-width: 640px), (min-width: 640px) and (max-width: 1200px) and (orientation: portrait), (min-width: 640px) and (max-width: 1200px) {
     .footer-menu {
       font-size: 0.8em; } }
 
@@ -797,5 +828,35 @@ header {
     .footer-site-map {
       margin-top: 20px;
       width: 100%; } }
+
+.contact-page-hero {
+  background-size: cover;
+  height: 45vh;
+  width: 50vw;
+  position: absolute;
+  right: 0;
+  background-repeat: no-repeat;
+  background-position: center;
+  z-index: 1;
+  margin-top: 100px;
+  margin-right: 100px; }
+  @media only screen and (max-width: 640px), (min-width: 640px) and (max-width: 1200px) and (orientation: portrait) {
+    .contact-page-hero {
+      position: static;
+      height: 35vh;
+      width: 100%;
+      margin-top: 0px; } }
+  @media (min-width: 640px) and (max-width: 1200px), only screen and (max-width: 640px), (min-width: 640px) and (max-width: 1200px) and (orientation: portrait) {
+    .contact-page-hero {
+      font-size: 0.8em; } }
+  @media (min-width: 640px) and (max-width: 1200px) {
+    .contact-page-hero {
+      margin-right: 0px; } }
+
+.geo-location-text {
+  font-size: 0.9em; }
+
+.contact-page-section {
+  margin-top: 50px; }
 
 /*# sourceMappingURL=custom.css.map */
