--- a/css/custom.css
+++ b/css/custom.css
@@ -46,7 +46,7 @@ body {
   */ }
 
 .margin-from-title {
-  margin-top: 150px; }
+  margin-top: 100px; }
   @media only screen and (max-width: 640px), (min-width: 640px) and (max-width: 1200px) and (orientation: portrait) {
     .margin-from-title {
       margin-top: 50px; } }
@@ -474,8 +474,9 @@ body {
   background-color: white;
   animation: button-hover-reveal 1s forwards; }
 
-.admission-cta-button:hover {
+.admission-cta-button-inner:hover {
   border: 1px solid #9B2437;
+  background: white;
   color: #9B2437;
   animation: button-hover-reveal 1s forwards; }
 
@@ -523,7 +524,9 @@ body {
 .mission-statement {
   vertical-align: top;
   width: calc(100% - 120px);
-  font-size: 1em; }
+  font-size: 1.1em;
+  border-left: 3px solid #ffe8ec;
+  padding-left: 40px; }
   @media only screen and (max-width: 640px), (min-width: 640px) and (max-width: 1200px) and (orientation: portrait) {
     .mission-statement {
       font-size: 1.1em;
@@ -851,6 +854,30 @@ header {
       font-size: 0.8em; } }
   @media (min-width: 640px) and (max-width: 1200px) {
     .contact-page-hero {
+      margin-right: 0px; } }
+
+.contact-section-hero {
+  background-size: cover;
+  height: 50vh;
+  width: 45vw;
+  position: absolute;
+  right: 0;
+  background-repeat: no-repeat;
+  background-position: center;
+  z-index: 1;
+  bottom: 0;
+  margin-bottom: 100px; }
+  @media only screen and (max-width: 640px), (min-width: 640px) and (max-width: 1200px) and (orientation: portrait) {
+    .contact-section-hero {
+      position: static;
+      height: 35vh;
+      width: 100%;
+      margin-top: 0px; } }
+  @media (min-width: 640px) and (max-width: 1200px), only screen and (max-width: 640px), (min-width: 640px) and (max-width: 1200px) and (orientation: portrait) {
+    .contact-section-hero {
+      font-size: 0.8em; } }
+  @media (min-width: 640px) and (max-width: 1200px) {
+    .contact-section-hero {
       margin-right: 0px; } }
 
 .geo-location-text {
