--- a/css/custom.css
+++ b/css/custom.css
@@ -50,7 +50,7 @@ body {
   @media only screen and (max-width: 640px), (min-width: 640px) and (max-width: 1200px) and (orientation: portrait) {
     .margin-from-title {
       margin-top: 50px; } }
-  @media (min-width: 640px) and (max-width: 1200px) {
+  @media (min-width: 640px) and (max-width: 1200px) and (orientation: landscape) {
     .margin-from-title {
       margin-top: 50px; } }
 
@@ -60,7 +60,7 @@ body {
   @media only screen and (max-width: 640px), (min-width: 640px) and (max-width: 1200px) and (orientation: portrait) {
     .section-width {
       width: 90vw; } }
-  @media (min-width: 640px) and (max-width: 1200px) {
+  @media (min-width: 640px) and (max-width: 1200px) and (orientation: landscape) {
     .section-width {
       width: 85vw; } }
 
@@ -70,7 +70,7 @@ body {
   @media only screen and (max-width: 640px), (min-width: 640px) and (max-width: 1200px) and (orientation: portrait) {
     .section-title {
       font-size: 2rem; } }
-  @media (min-width: 640px) and (max-width: 1200px) {
+  @media (min-width: 640px) and (max-width: 1200px) and (orientation: landscape) {
     .section-title {
       font-size: 2.2rem; } }
 
@@ -103,7 +103,7 @@ body {
 .muted-page-title {
   font-size: 8rem;
   font-weight: 600; }
-  @media (min-width: 640px) and (max-width: 1200px) {
+  @media (min-width: 640px) and (max-width: 1200px) and (orientation: landscape) {
     .muted-page-title {
       font-size: 4em; } }
 
@@ -119,7 +119,7 @@ body {
 
 .school-menu-text-body {
   height: 50px; }
-  @media only screen and (max-width: 640px), (min-width: 640px) and (max-width: 1200px) {
+  @media only screen and (max-width: 640px), (min-width: 640px) and (max-width: 1200px) and (orientation: landscape) {
     .school-menu-text-body {
       font-size: 0.8em;
       height: auto; } }
@@ -222,7 +222,7 @@ body {
   height: 100px;
   font-weight: 600;
   font-size: 1.7em; }
-  @media only screen and (max-width: 640px), (min-width: 640px) and (max-width: 1200px) {
+  @media only screen and (max-width: 640px), (min-width: 640px) and (max-width: 1200px) and (orientation: landscape) {
     .school-menu-text-title {
       font-size: 1.5em;
       height: auto; } }
@@ -236,7 +236,7 @@ body {
 .school-age-number {
   font-weight: 600;
   font-size: 3rem; }
-  @media only screen and (max-width: 640px), (min-width: 640px) and (max-width: 1200px) {
+  @media only screen and (max-width: 640px), (min-width: 640px) and (max-width: 1200px) and (orientation: landscape) {
     .school-age-number {
       font-size: 2.5rem; } }
 
@@ -246,7 +246,7 @@ body {
 .superscript {
   vertical-align: 100%;
   border-bottom: 1px solid #9B2437; }
-  @media only screen and (max-width: 640px), (min-width: 640px) and (max-width: 1200px) {
+  @media only screen and (max-width: 640px), (min-width: 640px) and (max-width: 1200px) and (orientation: landscape) {
     .superscript {
       font-size: 0.7em; } }
 
@@ -262,7 +262,7 @@ body {
 .menu-svg-arrow, .academics-menu-svg-arrow {
   width: 40px;
   height: auto; }
-  @media only screen and (max-width: 640px), (min-width: 640px) and (max-width: 1200px) {
+  @media only screen and (max-width: 640px), (min-width: 640px) and (max-width: 1200px) and (orientation: landscape) {
     .menu-svg-arrow, .academics-menu-svg-arrow {
       width: 30px; } }
 
@@ -272,27 +272,27 @@ body {
   @media only screen and (max-width: 640px), (min-width: 640px) and (max-width: 1200px) and (orientation: portrait) {
     .text-body {
       font-size: 0.8em; } }
-  @media (min-width: 640px) and (max-width: 1200px) {
+  @media (min-width: 640px) and (max-width: 1200px) and (orientation: landscape) {
     .text-body {
       font-size: 0.8em; } }
 
 .home-calendar {
   background-color: #9B2437;
-  height: 60vh;
+  height: auto;
   position: relative;
-  width: 30%;
-  margin-top: -300px; }
+  width: 40%;
+  margin-top: -320px; }
   @media only screen and (max-width: 640px), (min-width: 640px) and (max-width: 1200px) and (orientation: portrait) {
     .home-calendar {
       margin-left: 0;
       margin-top: 0;
-      width: auto;
+      width: 100%;
       position: static;
       height: auto; } }
-  @media (min-width: 640px) and (max-width: 1200px) {
+  @media (min-width: 640px) and (max-width: 1200px) and (orientation: landscape) {
     .home-calendar {
       height: auto;
-      width: 35%; } }
+      width: 40%; } }
 
 .home-head {
   background-size: cover;
@@ -315,7 +315,7 @@ body {
       width: 100vw;
       margin: 0;
       position: static; } }
-  @media (min-width: 640px) and (max-width: 1200px) {
+  @media (min-width: 640px) and (max-width: 1200px) and (orientation: landscape) {
     .home-head {
       width: 60vw;
       margin-left: 100px; } }
@@ -335,13 +335,16 @@ body {
   @media only screen and (max-width: 640px), (min-width: 640px) and (max-width: 1200px) and (orientation: portrait) {
     .column-header {
       font-size: 1.2em; } }
-  @media (min-width: 640px) and (max-width: 1200px) {
+  @media (min-width: 640px) and (max-width: 1200px) and (orientation: landscape) {
     .column-header {
       font-size: 1em; } }
 
 .calendar-header {
   font-size: 1.2em;
   font-weight: 600; }
+  @media only screen and (max-width: 640px) {
+    .calendar-header {
+      font-size: 1em; } }
 
 .calendar-body {
   font-size: 0.8em; }
@@ -358,9 +361,9 @@ body {
     .message-box {
       margin-left: 0;
       margin-top: 0;
-      width: auto;
+      width: 100vw;
       position: static; } }
-  @media (min-width: 640px) and (max-width: 1200px) {
+  @media (min-width: 640px) and (max-width: 1200px) and (orientation: landscape) {
     .message-box {
       margin-top: -120px;
       left: 45%;
@@ -373,7 +376,10 @@ body {
       margin-top: 0; } }
 
 .calendar-events {
-  border-left: 4px solid white; }
+  display: inline-block;
+  border-left: 1px solid white;
+  width: 45%;
+  vertical-align: top; }
   @media only screen and (max-width: 640px), (min-width: 640px) and (max-width: 1200px) and (orientation: portrait) {
     .calendar-events {
       margin-top: 30px; } }
@@ -393,7 +399,7 @@ body {
     .fact-card {
       width: auto;
       margin-top: 15px; } }
-  @media (min-width: 640px) and (max-width: 1200px) {
+  @media (min-width: 640px) and (max-width: 1200px) and (orientation: landscape) {
     .fact-card {
       width: calc(98% / 3); } }
 
@@ -407,7 +413,7 @@ body {
       width: 100%;
       margin-top: 15px;
       margin-bottom: 0px; } }
-  @media (min-width: 640px) and (max-width: 1200px) {
+  @media (min-width: 640px) and (max-width: 1200px) and (orientation: landscape) {
     .application-card {
       width: auto; } }
 
@@ -817,7 +823,7 @@ header {
   margin-top: 30px;
   width: 100%;
   color: white; }
-  @media only screen and (max-width: 640px), (min-width: 640px) and (max-width: 1200px) and (orientation: portrait), (min-width: 640px) and (max-width: 1200px) {
+  @media only screen and (max-width: 640px), (min-width: 640px) and (max-width: 1200px) and (orientation: portrait), (min-width: 640px) and (max-width: 1200px) and (orientation: landscape) {
     .footer-menu {
       font-size: 0.8em; } }
 
@@ -855,10 +861,10 @@ header {
       height: 35vh;
       width: 100%;
       margin-top: 0px; } }
-  @media (min-width: 640px) and (max-width: 1200px), only screen and (max-width: 640px), (min-width: 640px) and (max-width: 1200px) and (orientation: portrait) {
+  @media (min-width: 640px) and (max-width: 1200px) and (orientation: landscape), only screen and (max-width: 640px), (min-width: 640px) and (max-width: 1200px) and (orientation: portrait) {
     .contact-page-hero {
       font-size: 0.8em; } }
-  @media (min-width: 640px) and (max-width: 1200px) {
+  @media (min-width: 640px) and (max-width: 1200px) and (orientation: landscape) {
     .contact-page-hero {
       margin-right: 0px; } }
 
@@ -880,10 +886,10 @@ header {
       width: 100%;
       margin-top: 0px;
       display: none; } }
-  @media (min-width: 640px) and (max-width: 1200px), only screen and (max-width: 640px), (min-width: 640px) and (max-width: 1200px) and (orientation: portrait) {
+  @media (min-width: 640px) and (max-width: 1200px) and (orientation: landscape), only screen and (max-width: 640px), (min-width: 640px) and (max-width: 1200px) and (orientation: portrait) {
     .contact-section-hero {
       font-size: 0.8em; } }
-  @media (min-width: 640px) and (max-width: 1200px) {
+  @media (min-width: 640px) and (max-width: 1200px) and (orientation: landscape) {
     .contact-section-hero {
       margin-right: 0px; } }
 
