--- a/css/custom.scss
+++ b/css/custom.scss
@@ -1,6 +1,7 @@
-$tablet: "(min-width: 640px) and (max-width: 1200px)";
+$tablet: "(min-width: 640px) and (max-width: 1200px) and (orientation: landscape)";
 //" and (orientation: landscape)";
 $tablet-portrait: "(min-width: 640px) and (max-width: 1200px) and (orientation: portrait)";
+
 $phone: "only screen and (max-width: 640px)";
 $burgundy: #9B2437;
 
@@ -297,20 +298,20 @@ body{
 }
 .home-calendar{
 	background-color: $burgundy;
-    height: 60vh;
+    height: auto;
     position: relative;
-    width: 30%;
-	margin-top: -300px;
+    width: 40%;
+	margin-top: -320px;
 	@media #{$phone, $tablet-portrait}{
 		margin-left: 0;
 		margin-top: 0;
-		width: auto;
+		width: 100%;
 		position: static;
 		height: auto;
 	}
 	@media #{$tablet}{
 		height: auto;
-		width: 35%;
+		width: 40%;
 	}
 }
 .home-head{
@@ -363,6 +364,9 @@ body{
 .calendar-header{
 	font-size: 1.2em;
 	font-weight: 600;
+	@media #{$phone}{
+		font-size: 1em;
+	}
 }
 .calendar-body{
 	font-size: 0.8em;
@@ -378,7 +382,7 @@ body{
 	@media #{$phone, $tablet-portrait}{
 		margin-left: 0;
 		margin-top: 0;
-		width: auto;
+		width: 100vw;
 		position: static;
 	}
 	@media #{$tablet}{
@@ -395,7 +399,10 @@ body{
 
 }
 .calendar-events{
-	border-left: 4px solid white;
+	    display: inline-block;
+		border-left: 1px solid white;
+		width: 45%;
+		vertical-align: top;
 	@media #{$phone, $tablet-portrait}{
 		margin-top: 30px;
 	}
